samples/_failures_safe/1761258518_6a99b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37e8afb5.c: In function ‘tokenize’:
./samples/SAFE/__tmp_37e8afb5.c:162:9: error: expected expression at end of input
  162 |         current->line =
      |         ^~~~~~~
./samples/SAFE/__tmp_37e8afb5.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_37e8afb5.c:162:9: error: expected declaration or statement at end of input
